--- a/src/Acme.BookStore.Application.Contracts/Acme.BookStore.Application.Contracts.csproj
+++ b/src/Acme.BookStore.Application.Contracts/Acme.BookStore.Application.Contracts.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="MiniExcel" Version="1.31.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Payments\" />
+  </ItemGroup>
+
 </Project>
