--- a/src/Acme.BookStore.Application/Acme.BookStore.Application.csproj
+++ b/src/Acme.BookStore.Application/Acme.BookStore.Application.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="8.3.0" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="8.3.0" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="8.3.0" />
